@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-11-22 Warren L. DeLano <warren@delsci.com>
+
+	* fixed incompatibility with Roche Pocket Viewer
+	
 2008-11-12 Warren L. DeLano <warren@delsci.com>
 
 	* added max_ups setting to govern excessive geometry flux
